<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">StrongSwan</string>
    <string name="main_activity_name">StrongSwan</string>
    <string name="show_log">显示日志</string>
    <string name="search">搜索</string>
    <string name="vpn_not_supported_title">VPN不支持</string>
    <string name="vpn_not_supported">Your device does not support VPN applications.\nPlease contact the manufacturer.</string>
    <string name="vpn_not_supported_during_lockdown">VPN connections are not supported in lockdown mode.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="profile_not_found">未找到配置文件</string>
    <string name="strongswan_shortcut">strongSwan shortcut</string>

    <!-- Log view -->
    <string name="log_title">Log</string>
    <string name="send_log">发送到</string>
    <string name="empty_log">Log file is empty</string>
    <string name="log_mail_subject">strongSwan %1$s Log File</string>

    <!-- VPN profile list -->
    <string name="no_profiles">No VPN profiles.</string>
    <string name="add_profile">添加配置文件</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="select_profiles">Select profiles</string>
    <string name="profiles_deleted">Selected profiles deleted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="one_profile_selected">One profile selected</string>
    <string name="x_profiles_selected">%1$d profiles selected"</string>

    <!-- VPN profile details -->
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_name_label">Profile name (optional)</string>
    <string name="profile_name_hint">Defaults to the configured server</string>
    <string name="profile_name_hint_gateway">Defaults to \"%1$s\"</string>
    <string name="profile_gateway_label">代理服务器</string>
    <string name="profile_gateway_hint">IP address or hostname of the VPN server</string>
    <string name="profile_vpn_type_label">VPN Type</string>
    <string name="profile_username_label">用户名</string>
    <string name="profile_password_label">Password (optional)</string>
    <string name="profile_password_hint">Leave blank to get prompted on demand</string>
    <string name="profile_user_certificate_label">用户 证书</string>
    <string name="profile_user_select_certificate_label">Select user certificate</string>
    <string name="profile_user_select_certificate">Select a specific user certificate</string>
    <string name="profile_user_select_id_label">用户 身份</string>
    <string name="profile_user_select_id_init">Select a certificate first</string>
    <string name="profile_user_select_id_default">Default (%1$s)</string>
    <string name="profile_ca_label">CA certificate</string>
    <string name="profile_ca_auto_label">Select automatically</string>
    <string name="profile_ca_select_certificate_label">选择证书</string>
    <string name="profile_ca_select_certificate">选择一个特定的证书</string>
    <string name="profile_advanced_label">Advanced settings</string>
    <string name="profile_show_advanced_label">Show advanced settings</string>
    <string name="profile_remote_id_label">Server identity</string>
    <string name="profile_remote_id_hint">Defaults to the configured server. Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_remote_id_hint_gateway">Defaults to \"%1$s\". Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_mtu_label">MTU of the VPN tunnel device</string>
    <string name="profile_mtu_hint">In case the default value is unsuitable for a particular network</string>
    <string name="profile_port_label">Server port</string>
    <string name="profile_port_hint">UDP port to connect to, if different from the default</string>
    <string name="profile_split_tunneling_label">Split tunneling</string>
    <string name="profile_split_tunnelingv4_title">Block IPv4 traffic not destined for the VPN</string>
    <string name="profile_split_tunnelingv6_title">Block IPv6 traffic not destined for the VPN</string>
    <!-- Warnings/Notifications in the details view -->
    <string name="alert_text_no_input_gateway">A value is required to initiate the connection</string>
    <string name="alert_text_no_input_username">Please enter your username </string>
    <string name="alert_text_nocertfound_title">No CA certificate selected</string>
    <string name="alert_text_nocertfound">Please select one or activate <i>Select automatically</i></string>
    <string name="alert_text_out_of_range">Please enter a number in the range from %1$d - %2$d</string>
    <string name="tnc_notice_title">EAP-TNC may affect your privacy</string>
    <string name="tnc_notice_subtitle">Device data is sent to the server operator</string>
    <string name="tnc_notice_details"><![CDATA[<p>Trusted Network Connect (TNC) allows server operators to assess the health of a client device.</p><p>For that purpose the server operator may request data such as a unique identifier, a list of installed packages, system settings, or cryptographic checksums of files.</p><b>Any data will be sent only after verifying the server\'s identity.</b>]]></string>

    <!-- Trusted certificate selection -->
    <string name="trusted_certs_title">CA 证书</string>
    <string name="no_certificates">No certificates</string>
    <string name="reload_trusted_certs">Reload CA certificates</string>
    <string name="system_tab">System</string>
    <string name="user_tab">User</string>
    <string name="local_tab">Imported</string>
    <string name="delete_certificate_question">Delete certificate?</string>
    <string name="delete_certificate">The certificate will be permanently removed!</string>
    <string name="import_certificate">Import certificate</string>
    <string name="cert_imported_successfully">Certificate successfully imported</string>
    <string name="cert_import_failed">Failed to import certificate</string>

    <!-- VPN state fragment -->
    <string name="state_label">状态:</string>
    <string name="profile_label">配置:</string>
    <string name="disconnect">断开连接</string>
    <string name="state_connecting">连接中&#8230;</string>
    <string name="state_connected">已连接</string>
    <string name="state_disconnecting">断开中&#8230;</string>
    <string name="state_disabled">没有活动VPN</string>
    <string name="state_error">错误</string>

    <!-- IMC state fragment -->
    <string name="imc_state_label">Assessment:</string>
    <string name="imc_state_isolate">Restricted</string>
    <string name="imc_state_block">失败</string>
    <string name="show_remediation_instructions">View remediation instructions/查看补救措施</string>

    <!-- Remediation instructions -->
    <string name="remediation_instructions_title">补救措施</string>

    <!-- Dialogs -->
    <string name="login_title">输入密码连接</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_confirm">连接</string>
    <string name="error_introduction">建立VPN连接失败:</string>
    <string name="error_lookup_failed">Server address lookup failed.服务器地址查找失败</string>
    <string name="error_unreachable">Server is unreachable.无法访问服务器</string>
    <string name="error_peer_auth_failed">Verifying server authentication failed.验证服务器身份验证失败</string>
    <string name="error_auth_failed">User authentication failed.用户鉴权失败</string>
    <string name="error_assessment_failed">Security assessment failed.安全评估失败</string>
    <string name="error_generic">Unspecified failure while connecting.连接时未指定的失败</string>
    <string name="vpn_connected">VPN已连接</string>
    <string name="vpn_profile_connected">当前VPN已经连接!</string>
    <string name="reconnect">重连</string>
    <string name="connect_profile_question">Connect %1$s?</string>
    <string name="replaces_active_connection">This will replace your active VPN connection!</string>
    <string name="connect">Connect</string>

</resources>
